make dialogs HIG-compliant

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ Bugfixes:
 - removed the Help > Homepage menu item
 - added note to lock dialog when quit disabled due to unsaved changes
 - password checker and generator follow "show passwords" preference
+- HIG fixes
 
 Code changes:
 - depend on pygtk 2.8 and gnome-python 2.10
