added french translation [Gilles Accad]

--- a/NEWS
+++ b/NEWS
@@ -17,7 +17,8 @@ Bugfixes:
 - HIG fixes
 
 Translations:
-- added German translation [Christian Sagmueller]
+- added french translation [Gilles Accad]
+- added german translation [Christian Sagmueller]
 
 Code changes:
 - depend on pygtk 2.8 and gnome-python 2.10
