added chinese translation [Dancefire]

--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,7 @@ Bugfixes:
 - HIG fixes
 
 Translations:
+- added chinese translation [Dancefire]
 - added french translation [Gilles Accad]
 - added german translation [Christian Sagmueller]
 - added swedish translation [Daniel Nylander]
