--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.4.9
+============================
+
+Bugfixes:
+- fixed translation of field names and tooltips
+
+
 2006-12-31: Revelation 0.4.8
 ============================
 
