--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ xxxx-xx-xx: Revelation 0.4.9
 Bugfixes:
 - fixed translation of field names and tooltips
 
+Code changes:
+- added POTFILES.skip to skip translation for certain files
+
 
 2006-12-31: Revelation 0.4.8
 ============================
