updated german translation [Daniel Schindler]

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Bugfixes:
 
 Translations:
 - added czech translation [Zbyněk Mrkvička]
+- updated german translation [Daniel Schindler]
 
 
 2006-12-31: Revelation 0.4.8
