--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-xxxx-xx-xx: Revelation 0.4.9
+2007-01-11: Revelation 0.4.9
 ============================
 
 Bugfixes:
@@ -6,6 +6,10 @@ Bugfixes:
 - don't include built config.py during make dist
 - added POTFILES.skip to skip translation for certain files
 - set utf-8 encoding for POTFILES
+
+Translations:
+- added czech translation [Zbyněk Mrkvička]
+- updated german translation [Daniel Schindler]
 
 
 2006-12-31: Revelation 0.4.8
