use SCons to build (merged r603:622 from revelation-scons branch)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+xxxx-xx-xx: Revelation 0.5.0
+============================
+
+New features:
+
+- use SCons to build
+
+
 2007-01-11: Revelation 0.4.9
 ============================
 
