--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.4.10
+=============================
+
+Bugfixes:
+- don't import missing mman module in applet
+
+
 2007-01-11: Revelation 0.4.9
 ============================
 
