--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.4.11
+=============================
+
+Bugfixes:
+- fix applet configuration checks
+
+
 2007-01-16: Revelation 0.4.10
 =============================
 
