--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ xxxx-xx-xx: Revelation 0.4.11
 Bugfixes:
 - fix applet configuration checks
 
+Translation:
+- updated czech translation [Zbyněk Mrkvička]
+
 
 2007-01-16: Revelation 0.4.10
 =============================
