--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+2007-01-16: Revelation 0.4.11
+=============================
+
+Bugfixes:
+- fix applet configuration checks
+
+Translation:
+- updated czech translation [Zbyněk Mrkvička]
+
+
+2007-01-16: Revelation 0.4.10
+=============================
+
+Bugfixes:
+- don't import missing mman module in applet
+
+
 2007-01-11: Revelation 0.4.9
 ============================
 
