--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+xxxx-xx-xx: Revelation 0.4.12
+=============================
+
+Translation:
+- added finnish translation [Ilkka Tuohela]
+
 2007-01-16: Revelation 0.4.11
 =============================
 
