--- a/README
+++ b/README
@@ -15,3 +15,11 @@ Revelation depends on the following software:
 - gnome-python-extras 2.10
 - pycrypto 1.9
 - cracklib
+
+In addition, to build Revelation from source code you will need:
+
+- SCons
+- xsltproc
+- docbook xsl stylesheets
+- Groff
+- ImageMagick
