added russian translation [Aleksey Klimov]

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Bugfixes:
 
 Translation:
 - added finnish translation [Ilkka Tuohela]
+- added russian translation [Aleksey Klimov]
+
 
 2007-01-16: Revelation 0.4.11
 =============================
