--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ xxxx-xx-xx: Revelation 0.4.12
 
 Bugfixes:
 - fixed crash in XHTML exporter [Javier Kohen]
+- fixed crash when saving file after certain imports
 
 Translation:
 - added finnish translation [Ilkka Tuohela]
