added swedish translation of desktop file [Daniel Nylander]

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Bugfixes:
 Translation:
 - added finnish translation [Ilkka Tuohela]
 - added russian translation [Aleksey Klimov]
+- added swedish translation of desktop file [Daniel Nylander]
 
 
 2007-01-16: Revelation 0.4.11
